--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "mywebpack",
+  "name": "{{name}}",
   "version": "1.0.0",
-  "description": "",
+  "description": "{{"description}}",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --open --config build/webpack.dev.js",
     "build": "webpack --config build/webpack.prod.js --progress"
   },
-  "author": "",
+  "author": "{{author}",
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "^8.0.2",
