--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server --open --config build/webpack.dev.js",
     "build": "webpack --config build/webpack.prod.js --progress"
   },
-  "author": "{{author}",
+  "author": "{{author}}",
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "^8.0.2",
